--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -1,4 +1,4 @@
-{% set headermenu = _Menu.get({'menuType': 'header', "menuGroupName":"header-main"}) %}
+{# {% set headermenu = _Menu.get({'menuType': 'header', "menuGroupName":"header-main"}) %}
 {% set miniMenu = _Menu.get({'menuType': 'header', 'menuGroupName': 'header-mini'}) %}
 
 
@@ -7,98 +7,102 @@
 
 
 
-{% set logo = networkData.templatePath~'/static/images/logo.svg'%}
+{% set logo = networkData.templatePath~'/static/images/logo.png'%}
 
 {% set logoWidth = 650 %}
 {% set logoHeight = 144 %}
 
 {% if config['logo'] is defined %}
-    {% if config['logo']['width'] is defined %}
-        {% set logoWidth = config['logo']['width'] %}
+{% if config['logo']['width'] is defined %}
+{% set logoWidth = config['logo']['width'] %}
 
-        {% if config['logo']['height'] is not defined %}
-            {% set logoHeight = 0 %}
-        {% endif %}
-    {% endif %}
+{% if config['logo']['height'] is not defined %}
+{% set logoHeight = 0 %}
+{% endif %}
+{% endif %}
 
-    {% if config['logo']['height'] is defined %}
-        {% set logoHeight = config['logo']['height'] %}
+{% if config['logo']['height'] is defined %}
+{% set logoHeight = config['logo']['height'] %}
 
-        {% if config['logo']['width'] is not defined %}
-            {% set logoWidth = 0 %}
-        {% endif %}
+{% if config['logo']['width'] is not defined %}
+{% set logoWidth = 0 %}
+{% endif %}
 
-    {% endif %}
+{% endif %}
 {% endif %}
 
 {% set paywall = true %}
 
 {% if config['paywall'] is defined and config['paywall'] == false %}
-    {% set paywall = false %}
+{% set paywall = false %}
 {% endif %}
 
 {% if networkData.logoMedia | length > 0 %}
-    {% set logo = _Media.getMediaUrl(networkData.logoMedia, logoWidth, logoHeight, {'crop': 'fit'} ) %}
+{% set logo = _Media.getMediaUrl(networkData.logoMedia, logoWidth, logoHeight, {'crop': 'fit'} ) %}
 {% endif %}
 
-{% set dateFormat = "l, j F Y" %}
-{% if config['dateFormat'] is defined and config['dateFormat'] != "" %}
-    {% set dateFormat = config['dateFormat'] %}
-{% endif %}
-{% set theDate = _AppHelper.getCurrentTimestampBasedOnTimezone() %}
-{% set date = _AppHelper.getDefaultTimezoneDateTime(theDate, dateFormat) %}
+
 
 
 <header class="c-header-0 u-mobile-margin-bottom-20" data-header="0">
     <div class="container">
         <div class="row">
             <div class="col-12 c-header-0__container">
-                
 
-                
+
+
                 <div class="c-header-0-top-bar">
-                    
+
                     {{this.render('../_submenu_navigation.twig', {
-                        items: miniMenu,
-                        class: 'c-header-0-top-bar__link',
+                    items: miniMenu,
+                    class: 'c-header-0-top-bar__link',
                     }) | raw}}
-                    
+
                 </div>
-                
+
 
 
 
                 <div class="c-header-0__row2">
-                
-                    <div class="c-header-0__mobile-login {% if not loggedin %} c-header-0__mobile-login--guest {% endif %}">
-                        {% if paywall %}
-                            {% if loggedin %}
-                                <a class="c-header-0__login-text" href="{{networkData.defaultBlogUrl}}/user/edit-profile" class="">My account</a>
-                                <a href="{{_AppHelper.getLogoffUrl()}}" class="c-header-0__login-text">Log out</a>
-                            {% else %}
-                                <a id="signinBtn" href="javascript:;" class="c-button c-button--rounded c-button--blue-bordered u-margin-right-50">Log in</a>
-                                <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions" class="c-button c-button--rounded c-button--blue">Subscribe</a>
 
-                            {% endif %}
+                    <div
+                        class="c-header-0__mobile-login {% if not loggedin %} c-header-0__mobile-login--guest {% endif %}">
+                        {% if paywall %}
+                        {% if loggedin %}
+                        <a class="c-header-0__login-text" href="{{networkData.defaultBlogUrl}}/user/edit-profile"
+                            class="">My account</a>
+                        <a href="{{_AppHelper.getLogoffUrl()}}" class="c-header-0__login-text">Log out</a>
+                        {% else %}
+                        <a id="signinBtn" href="javascript:;"
+                            class="c-button c-button--rounded c-button--blue-bordered u-margin-right-50">Log in</a>
+                        <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions"
+                            class="c-button c-button--rounded c-button--blue">Subscribe</a>
+
+                        {% endif %}
                         {% endif %}
 
                     </div>
                     <div class="c-header-0__weather-info--date">{{date}}</div>
-                    <div id="weather" class="c-header-0__weather-info c-header-0__weather-info-xs weather-panel-reverse j-weather-panel"></div>
-                
+                    <div id="weather"
+                        class="c-header-0__weather-info c-header-0__weather-info-xs weather-panel-reverse j-weather-panel">
+                    </div>
+
                 </div>
 
-                
-                
+
+
                 <div class="c-header-0__login-info">
                     {% if paywall %}
-                        {% if loggedin %}
-                            <a class="c-header-0__login-text" href="{{networkData.defaultBlogUrl}}/user/edit-profile" class="">My account</a>
-                            <a href="{{_AppHelper.getLogoffUrl()}}" class="c-header-0__login-text">Log out</a>
-                        {% else %}
-                            <a id="signinBtn" href="javascript:;" class="c-button c-button--rounded c-button--blue-bordered u-margin-right-10">Log in</a>
-                            <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions" class="c-button c-button--rounded c-button--blue">Subscribe</a>
-                        {% endif %}
+                    {% if loggedin %}
+                    <a class="c-header-0__login-text" href="{{networkData.defaultBlogUrl}}/user/edit-profile"
+                        class="">My account</a>
+                    <a href="{{_AppHelper.getLogoffUrl()}}" class="c-header-0__login-text">Log out</a>
+                    {% else %}
+                    <a id="signinBtn" href="javascript:;"
+                        class="c-button c-button--rounded c-button--blue-bordered u-margin-right-10">Log in</a>
+                    <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions"
+                        class="c-button c-button--rounded c-button--blue">Subscribe</a>
+                    {% endif %}
                     {% endif %}
 
                 </div>
@@ -113,25 +117,27 @@
                         <ul class="c-navigation-0__list">
                             {{ this.render('../../../partials/_menu.twig', {'menu': headermenu}) | raw }}
                         </ul>
-                        
+
                         <div class="c-navigation-0__icons">
                             <div class="c-navigation-0__icons__menu o-hamburger js-menu"></div>
                             <div class="c-navigation-0__icons__search">
-                                <div class="js-searchButton__search">{{ this.render('../../../partials/icons.twig', {icon: 'search'} ) | raw }}</div>
-                                <div class="js-searchButton__close d-none">{{ this.render('../../../partials/icons.twig', {icon: 'cross'} ) | raw }}</div>
+                                <div class="js-searchButton__search">{{ this.render('../../../partials/icons.twig',
+                                    {icon: 'search'} ) | raw }}</div>
+                                <div class="js-searchButton__close d-none">{{
+                                    this.render('../../../partials/icons.twig', {icon: 'cross'} ) | raw }}</div>
                             </div>
                         </div>
 
 
 
-                        
+
                     </div>
                 </div>
 
                 <div class="c-header-0__fixed c-header-0__fixed--off" id="j-menu-fixed">
-                    <div class="c-header-0__main-info c-header-0__fixed-block" >
+                    <div class="c-header-0__main-info c-header-0__fixed-block">
                         <a href="{{networkData.defaultBlogUrl}}" class="c-header-0__main-info__logo">
-                            <img src="{{logo}}" class="image-fluid"  style="max-height:50px;"/>
+                            <img src="{{logo}}" class="image-fluid" style="max-height:50px;" />
                         </a>
                         <div class="c-navigation-0 c-navigation-0-md c-navigation-0__fixed">
                             <ul class="c-navigation-0__list d-none d-lg-flex">
@@ -150,31 +156,34 @@
         </div>
     </div>
 </header>
-    <div class="c-search-bar">
-        <div class="container">
-            <form class="c-search-bar__form" method="get" id="searchform" action="{{networkData.defaultBlogUrl}}/search">
-                <div class="c-search-bar__submit"></div>
-                <input class="c-search-bar__input" type="text" name="s" placeholder="Search"/>
-                <button class="c-button c-button--rounded c-button--blue" type="submit" id="searchsubmit">Go</button>
-            </form>
-        </div>
+<div class="c-search-bar">
+    <div class="container">
+        <form class="c-search-bar__form" method="get" id="searchform" action="{{networkData.defaultBlogUrl}}/search">
+            <div class="c-search-bar__submit"></div>
+            <input class="c-search-bar__input" type="text" name="s" placeholder="Search" />
+            <button class="c-button c-button--rounded c-button--blue" type="submit" id="searchsubmit">Go</button>
+        </form>
     </div>
+</div>
 
 <div class="responsive-standalone">
-    
+
     <ul class="standalone-menu">
         <li class="c-search-bar d-block d-md-none">
-            <form class="c-search-bar__form" method="get" id="searchform" action="{{networkData.defaultBlogUrl}}/search">
-                <div class="c-search-bar__icon">{{ this.render('../../../partials/icons.twig', {icon: 'search'} ) | raw }}</div>
-                <input class="c-search-bar__input" type="text" name="s" placeholder="Search"/>
-                <button class="c-search-bar__button c-button c-button--rounded c-button--blue" type="submit" id="searchsubmit">Go</button>
+            <form class="c-search-bar__form" method="get" id="searchform"
+                action="{{networkData.defaultBlogUrl}}/search">
+                <div class="c-search-bar__icon">{{ this.render('../../../partials/icons.twig', {icon: 'search'} ) | raw
+                    }}</div>
+                <input class="c-search-bar__input" type="text" name="s" placeholder="Search" />
+                <button class="c-search-bar__button c-button c-button--rounded c-button--blue" type="submit"
+                    id="searchsubmit">Go</button>
             </form>
         </li>
         {{ this.render('../../../partials/_menu.twig', {
-            'menu': headermenu
-            }) | raw }}
+        'menu': headermenu
+        }) | raw }}
     </ul>
-    
+
     <div class="responsive-standalone-close">
         <div class="responsive-standalone-close-menu">Menu</div>
         <div class="responsive-standalone-close-close o-close o-close--dark"></div>
@@ -182,4 +191,47 @@
 
 </div>
 
-<div class="responsive-standalone-overlay"></div>
+<div class="responsive-standalone-overlay"></div> #}
+
+
+{% set dateFormat = "l, j F Y" %}
+{% if config['dateFormat'] is defined and config['dateFormat'] != "" %}
+{% set dateFormat = config['dateFormat'] %}
+{% endif %}
+{% set theDate = _AppHelper.getCurrentTimestampBasedOnTimezone() %}
+{% set date = _AppHelper.getDefaultTimezoneDateTime(theDate, dateFormat) %}
+
+<div class="c-header__top">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="c-header__top-container">
+                    <aside class="c-header__top-date">{{date}}</aside>
+                    <aside class="c-header__top-nav">
+                        <ul>
+                            <li>
+                                <a href="javascript:;">Custom page</a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">Custom page</a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">Custom page</a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">Custom page</a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">Custom page</a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">Custom page</a>
+                            </li>
+                        </ul>
+                    </aside>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
