sass migration for higher version

--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -200,36 +200,37 @@
 {% endif %}
 {% set theDate = _AppHelper.getCurrentTimestampBasedOnTimezone() %}
 {% set date = _AppHelper.getDefaultTimezoneDateTime(theDate, dateFormat) %}
+<div class="c-header c-header-xs">
+    <div class="c-header-top-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="c-header-top-bar__container">
+                        <aside class="c-header-top-bar__date">{{date}}</aside>
+                        <aside class="c-header-top-bar__nav">
+                            <ul>
+                                <li>
+                                    <a href="javascript:;">Custom page</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;">Custom page</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;">Custom page</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;">Custom page</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;">Custom page</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;">Custom page</a>
+                                </li>
+                            </ul>
+                        </aside>
 
-<div class="c-header__top">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="c-header__top-container">
-                    <aside class="c-header__top-date">{{date}}</aside>
-                    <aside class="c-header__top-nav">
-                        <ul>
-                            <li>
-                                <a href="javascript:;">Custom page</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Custom page</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Custom page</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Custom page</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Custom page</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">Custom page</a>
-                            </li>
-                        </ul>
-                    </aside>
-
+                    </div>
                 </div>
             </div>
         </div>
