--- a/static/sass/_settings.variables.scss
+++ b/static/sass/_settings.variables.scss
@@ -35,6 +35,7 @@ $darkergrey: #979797;
 $greyish: #595859;
 $grey: #d8d8d8;
 $grey2: #7f7f7f;
+$grey3: #f6f5f5;
 $black: #000000;
 $transparent: rgba(0, 0, 0, 0);
 $blue: #4a90e2;
@@ -76,7 +77,7 @@ $black_sh3: lighten($black_sh1, 40%); /* color code == #999999 */
 $black_sh4: lighten($black_sh1, 60%); /* color code == #cccccc */
 $black_sh5: lighten($black_sh1, 41%); /* color code == #9c9c9c */
 $blue: #0e215d;
-$blue_sh1: #4573cd;
+$blue_sh1: #0a1630;
 $blue_sh2: #4772cc;
 $blue_sh3: #ebf4f8;
 $blue_sh4: #7197e2;
