--- a/static/sass/_settings.variables.scss
+++ b/static/sass/_settings.variables.scss
@@ -81,6 +81,7 @@ $blue_sh1: #0a1630;
 $blue_sh2: #4772cc;
 $blue_sh3: #ebf4f8;
 $blue_sh4: #7197e2;
+$blue_sh5: #5748f6;
 
 //Buttons
 // $btn-primary-color:              #fff !default;
