--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -1,140 +1,124 @@
 /* Begin cards view style */
+.c-cards {
+    &-container {
+        &.bottom-border {
+            border-bottom: 1px solid $grey4;
+            @include margin-bottom(20);
+            @include padding-bottom(15);
+        }
 
-.c-cards-view {
-    @include flexbox();
-    @include calc(height, '100% - 40px');
-    position: relative;
-
-    &.draft {
-        opacity: 0.3
+        .left-border {
+            + .left-border {
+                border-left: 1px solid $grey4;
+            }
+        }
     }
-    &__media {
+
+    &-view {
+        @include flexbox();
+        @include calc(height, "100% - 40px");
         position: relative;
-        margin:0;
+
+        &.draft {
+            opacity: 0.3;
+        }
+
+        &__media {
+            position: relative;
+            margin: 0;
 
             // IE10+ HACK
             _:-ms-lang(x) {
-            overflow:hidden !important;
-
-        }
-        // IE9 HACK
-        :root img {
-            height:auto;
-            width:auto;
-            max-width:none;
-        }  
+                overflow: hidden !important;
+            }
+            // IE9 HACK
+            :root img {
+                height: auto;
+                width: auto;
+                max-width: none;
+            }
 
             // IE10+ HACK
-        _:-ms-lang(x), img {
-            height:auto !important;
-            width:auto !important;
-            min-width:100% !important;
-            max-width:100% !important;
-            min-height:100% !important;
-            max-height:100% !important;
-        } 
+            _:-ms-lang(x),
+            img {
+                height: auto !important;
+                width: auto !important;
+                min-width: 100% !important;
+                max-width: 100% !important;
+                min-height: 100% !important;
+                max-height: 100% !important;
+            }
 
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
 
-        img {
-            width:100%;
-            height:100%;
-            object-fit: cover;
-        }
-
-        &--video {
-            &:before {
-                content: '';
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                @include translate(-50%, -50%);
-                display: block;
-                @include size(70px);
-                background-image: url('../icons/video-icon.svg');
-                background-repeat: no-repeat;
-                background-size:cover;
-                z-index: 15;
+            &--video {
+                &:before {
+                    content: "";
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    @include translate(-50%, -50%);
+                    display: block;
+                    @include size(70px);
+                    background-image: url("../icons/video-icon.svg");
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    z-index: 15;
+                }
             }
         }
 
-    }
+        &__category {
+            @include font-size(12);
+            color: $blue_sh5;
+            font-weight: $weightMedium;
+        }
 
-    &__container {
-    }
+        &__heading {
+            @include font-size(26);
+            color: $black;
+            font-family: $secondaryFont;
+            font-weight: $weightBold;
+            min-height: 60px;
+        }
 
-    &__category {
-        @include font-size(12);
-   }
-
-    &__heading {
-        @include font-size(22);
-   }
-
-    &__description {
-        @include font-size(14);
-   }
-
-    &__additional-info {
-        @include flexbox();
-        @include justify-content(space-between);
-        @include align-items(center);
-        &__price {
+        &__description {
             @include font-size(14);
         }
 
-        &__features {
-            @include flexbox();
-            @include justify-content(flex-start);
-            @include align-items(center);
+        &__time {
+            color: $grey5;
+            @include font-size(12);
+            line-height: 1.33;
+        }
 
-            &-list {
-                margin-left: 15px;
+        &.without-image {
+            background-color: rgba($grey, 0.8);
 
-                .icon {
+            .c-cards-view {
+                &__media {
+                    display: none;
                 }
 
-                .text {
+                &__heading {
+                    min-height: inherit;
+                    max-height: 100px;
                 }
             }
         }
-    }
 
-    &__author {
-
-    }
-
-    &__author-name {
-    }
-
-    &__time {
-    }
-
-
-
-    &.without-image {
-        background-color: rgba($grey, 0.8);
-
-        .c-cards-view {
-            &__media {
-                display: none;
-            }
-
-            &__heading {
-                min-height: inherit;
-                max-height: 100px;
-            }
-        }
-    }
-
-
-    &.social {
-        .c-cards-view {
-
-            &__heading {
-                display:none;
-            }
-            &__description {
-                display:block;
+        &.social {
+            .c-cards-view {
+                &__heading {
+                    display: none;
+                }
+                &__description {
+                    display: block;
+                }
             }
         }
     }
@@ -142,64 +126,63 @@
 
 div[class^="card"] {
     > a {
-        position:relative;
-        display:block;
+        position: relative;
+        display: block;
+        text-decoration: none;
     }
 
-    &:hover, &:focus, &:active {
+    &:hover,
+    &:focus,
+    &:active {
         > a {
-            text-decoration:none;
+            text-decoration: none;
         }
 
         div.btn_overlay {
-            visibility:visible;
+            visibility: visible;
             @include opacity(1);
             @include transition((opacity(1), 2s ease-out));
         }
     }
 }
 
-
-
-
-
 /*! Overlay Button */
 .btn_overlay {
-    top:0;
-    left:0;
-    width:auto;
-    z-index:99999;
-    width:28px;
-    position:absolute;
-    visibility:hidden;
+    top: 0;
+    left: 0;
+    width: auto;
+    z-index: 99999;
+    width: 28px;
+    position: absolute;
+    visibility: hidden;
     @include opacity(0);
     @include transition((opacity(0), 2s ease-out));
-    background:transparent none repeat scroll 0 0;
-
+    background: transparent none repeat scroll 0 0;
 
     .btnhide {
-        float:left;
-        width:28px;
-        color:#ededed;
-        border:0 none;
-        margin:0px 0px;
-        min-height:28px;
-        max-height:28px;
-        line-height:28px;
-        position:relative;
+        float: left;
+        width: 28px;
+        color: #ededed;
+        border: 0 none;
+        margin: 0px 0px;
+        min-height: 28px;
+        max-height: 28px;
+        line-height: 28px;
+        position: relative;
         @include border-radius(0px);
         // font-size:($baseFontSize * 1);
-        border:1px solid rgba(black, 0.9);
+        border: 1px solid rgba(black, 0.9);
         @include transition(all 0.5s ease 0s);
-        background:none repeat scroll 0 0 rgba(black, 0.9);
+        background: none repeat scroll 0 0 rgba(black, 0.9);
 
         &:not(:first-child) {
-            border-top:0px none!important;
+            border-top: 0px none !important;
         }
 
-        &:hover, &:active {
-            border:1px solid rgba(black, 0.1);
-            background-color:$blue;
+        &:hover,
+        &:active {
+            border: 1px solid rgba(black, 0.1);
+            background-color: $blue;
         }
 
         .fa {
@@ -210,16 +193,22 @@ div[class^="card"] {
             @include transform(rotate(-33deg));
 
             &::after {
-                left:5%;
-                right:5%;
-                z-index:0;
-                height:6%;
-                bottom:-5%;
-                content:"";
-                position:absolute;
+                left: 5%;
+                right: 5%;
+                z-index: 0;
+                height: 6%;
+                bottom: -5%;
+                content: "";
+                position: absolute;
                 @include border-radius(70%);
                 @include transform(scaleY(0.1));
-                @include box-shadow((0 0 6px 6px rgba(0,0,0,0.1), 0 0 15px 10px rgba(0,0,0,0.1), inset 0 0 10px 20px rgba(0,0,0,0.25)));
+                @include box-shadow(
+                    (
+                        0 0 6px 6px rgba(0, 0, 0, 0.1),
+                        0 0 15px 10px rgba(0, 0, 0, 0.1),
+                        inset 0 0 10px 20px rgba(0, 0, 0, 0.25)
+                    )
+                );
             }
         }
     }
@@ -227,52 +216,51 @@ div[class^="card"] {
 
 /*! Overlay Button Tooltips */
 .social-tooltip {
-    z-index:98;
-    color:$white;
-    display:inline;
-    position:relative;
+    z-index: 98;
+    color: $white;
+    display: inline;
+    position: relative;
     // font-size:($baseFontSize * 1) - 2;
     &.selected {
-        background-color:$blue;
-        border-color:$blue ;
+        background-color: $blue;
+        border-color: $blue;
     }
     &:focus {
         outline: 0 !important;
-      }
+    }
 
     &:hover {
-        color:$white;
-        text-decoration:none;
+        color: $white;
+        text-decoration: none;
 
-          
         &:after {
-            top:3px;
-            left:40px;
-            color:$white;
-            display:block;
-            line-height:1.3;
-            font-weight:400;
-            padding:5px 8px;
-            position:absolute;
-            white-space:nowrap;
-            content:attr(title);
+            top: 3px;
+            left: 40px;
+            color: $white;
+            display: block;
+            line-height: 1.3;
+            font-weight: 400;
+            padding: 5px 8px;
+            position: absolute;
+            white-space: nowrap;
+            content: attr(title);
             @include border-radius(3px);
             // font-size:($baseFontSize * 1) - 2;
-            -webkit-box-shadow:0 0 2px rgba($black ,0.2);
-            @include box-shadow(0 0 2px rgba($black ,0.2));
-            background-color:rgba($blue ,0.95);
+            -webkit-box-shadow: 0 0 2px rgba($black, 0.2);
+            @include box-shadow(0 0 2px rgba($black, 0.2));
+            background-color: rgba($blue, 0.95);
         }
 
         &:before {
-            top:11px;
-            left:35px;
-            z-index:1;
-            border:solid;
-            border-color:transparent rgba($blue ,0.95);
-            border-width:5px 5px 5px 0;
-            content:" ";
-            display:block;
-            position:absolute;
+            top: 11px;
+            left: 35px;
+            z-index: 1;
+            border: solid;
+            border-color: transparent rgba($blue, 0.95);
+            border-width: 5px 5px 5px 0;
+            content: " ";
+            display: block;
+            position: absolute;
         }
     }
 }
